Add materials for lecture 7 and lab 9